# AO-OpenResearch

./: .dockerignore  .env.example  .gitignore  NEXT_PLAN.md  pyproject.toml
src/: pyproject.toml
src/atari/collectors/: dream_collector.py  sequence_buffer.py
src/atari/entrypoints/: AtariDreamTrainer.py  train_dreamer_rl.py
src/atari/environments/: atari_env.py
src/atari/loss/: dreamer.py
src/atari/tests/: conftest.py  test_atari_env.py  test_atari_losses_buffer.py  test_atari_model.py  test_atari_trainer.py
src/configs/base/: common.yaml
src/core/: config.py  registry.py
src/micro-rts/: registry_imports.py
src/micro-rts/archive/: README.md
src/micro-rts/collectors/: buffer.py  collector.py  dream_collector.py  runner.py  selfplay_collector.py  sequence_buffer.py  vecpool.py
src/micro-rts/entrypoints/: audit_structured_dataset.py  augment_fog_observations.py  compare_structured_tokenizers.py  compare_structured_world_models.py  eval_belief_dynamics.py  eval_discrete_dynamics.py  eval_dreamer_dynamics.py  eval_dreamer_tokenizer.py  eval_micro_rts.py  eval_structured_dynamics.py  incomplete_info_common.py  migrate_structured_none_actions.py  pretrain.py  pretrain_belief_dynamics.py  pretrain_common.py  pretrain_factorized_world_action_dynamics.py  pretrain_incomplete_action_tokenizer.py  pretrain_incomplete_flow_dynamics.py  pretrain_incomplete_obs_tokenizer.py  pretrain_opponent_intent_prior.py  pretrain_opponent_plan_tokenizer.py  pretrain_world_action_encoder.py  probes.py  structured_v2_common.py  train_action_tokenizer.py  train_discrete_action_tokenizer.py  train_discrete_dynamics.py  train_discrete_tokenizer.py  train_dreamer_dynamics.py  train_dreamer_rl.py  train_dreamer_tokenizer.py  train_dynamics.py  train_encoder.py  train_entry.py  train_opponent_latent.py  train_ppo.py  train_tokenizer.py
src/micro-rts/environments/: base.py  dream_env.py  microrts_env.py  normalize.py  shape_reward.py
src/micro-rts/evaluation/: elo.py  matchplay.py
src/micro-rts/loss/: __init__.py  dreamer.py  ppo.py  structured_dreamer.py
src/micro-rts/models/: cnn_mlp_policy.py  cnn_policy.py  gridnet_policy.py  masked_policy.py  random_policy.py
src/micro-rts/rewards/: rewards.py
src/micro-rts/tests/: conftest.py  test_buffer.py  test_collection.py  test_config.py  test_curriculum.py  test_dream_trainer.py  test_dreamer_buffer_env.py  test_dreamer_losses.py  test_env.py  test_eval.py  test_experts.py  test_fog_augmentation.py  test_gridnet.py  test_incomplete_information_world_model.py  test_joint_action_wm.py  test_masked_action_head.py  test_models.py  test_multiprocess.py  test_normalize.py  test_offline_collection.py  test_offline_dataloader.py  test_opp_policy_head.py  test_opponent_action.py  test_ppo_loss.py  test_ppo_trainer.py  test_registry_wiring.py  test_reward_shaping.py  test_runner.py  test_structured_dreamer.py  test_structured_world_model_v2.py  test_trainer_infra.py  test_world_action_model.py
src/micro-rts/trainers/: BaseTrainer.py  DiscreteActionTokenizerTrainer.py  DiscreteDynamicsTrainer.py  DiscreteTokenizerTrainer.py  guards.py  (+14 more)
(+190 files in other folders)
